# jarvis-server

./: .dockerignore  .env  .env.e2e  .env.example  .env.manual-test.example  .env.test  .gitignore  .npmrc  .prettierrc  CHANGELOG.md  CLAUDE.md  COLLABORATION.md  Dockerfile  LICENSE  README.md  docker-compose.e2e.yml  docker-compose.manual-test.yml  docker-compose.yml  eslint.config.mjs  eslintoutput.config.js  init-memu-db.sql  jest.config.ts  memu-main-override.py  package.json  pyproject.toml  release-please-config.json  ruff.toml  skills-lock.json  sonar-project.properties  tsconfig.build.json  tsconfig.json
.github/: copilot-commit-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docker.yml  prerelease.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  (+8 more)
app/: config.py  main.py  run_worker.py  temporal_client.py  temporal_schedules.py  temporal_worker.py
prompts/: deep-dream-health-fix.md  deep-dream-phase1-light-sleep.md  deep-dream-phase2-rem-sleep.md  deep-dream-phase3-consolidate.md  deep_dream_consolidate.md  deep_dream_health_fix.md  deep_dream_phase1_light_sleep.md  deep_dream_phase2_rem_sleep.md  light-extraction.md  light-record.md  light_dream_extract.md  merge_agent.md  record_agent.md  weekly-review.md  weekly_review_agent.md
scripts/: README.md  backfill_vault_summaries.py  rebuild_memu_index.py
src/: app.module.ts  main.ts
test/: api-mock.e2e-spec.ts  audit-log.e2e-spec.ts  blog.e2e-spec.ts  comment.e2e-spec.ts  config.e2e-spec.ts  context.e2e-spec.ts  conversation.e2e-spec.ts  dream-trigger.e2e-spec.ts  error-envelope.e2e-spec.ts  git-ops.integration-spec.ts  health.e2e-spec.ts  jest-e2e.json  memory.e2e-spec.ts  temporal-bootstrap.integration-spec.ts  temporal-coordinator.integration-spec.ts  vault-sync.integration-spec.ts  vault.e2e-spec.ts
tests/: conftest.py  test_commit_and_pr_activity.py  test_coordinator_workflow.py  test_deep_activities.py  test_deep_dream_workflow.py  test_light_dream_workflow.py  test_main_lifespan.py  test_story_9_27_vault_guide_injection.py  test_temporal_client.py  test_temporal_schedules.py  test_temporal_worker.py  test_weekly_commit_and_pr_activity.py  test_weekly_review_workflow.py
tools/: migration.ts  proto-gen.js
(+697 files in other folders)
